# perovkit

./: .gitignore  pyproject.toml
src/perovkit/: core.py  ligand.py  nc.py  slab.py
src/pync/: __init__.py  core.py  ligand.py  nc.py
src/pync/strain/: strain.py
src/pync/utils/: rotation.py
