[project]
name = "perovkit"
version = "0.1.0"
description = "PerovKit: A Framework for Generating and Analyzing Ligand-passivated Perovskite Nanocrystals"
authors = [
    { name="Seungjun Cha", email="scha@gatech.edu" }
]
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "scipy",
    "tqdm",
    "ase",
    "rdkit",  
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"